// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-user-avatar-by-id should delete avatar for user by id 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;

exports[`delete-user-avatar-by-id should handle non-existent user id 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The user was not found","status":404,"detail":"The specified user was not found.","operationStatus":"UserNotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`delete-user-avatar-by-id should handle user without avatar 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
